--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0
 langchain-openai==0.1.1
 langchain-astradb==0.3.3
 langchain-core==0.1.52
