--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-langchain-openai==0.1.1
-langchain-astradb==0.3.3
-langchain-core==0.1.52
-pandas==2.1.3
-python-multipart==0.0.6
+fastapi==0.100.0
+uvicorn==0.23.0
+langchain==0.1.0
+langchain-openai==0.0.8
+langchain-community==0.0.10
+openai==1.12.0
+pandas==2.0.3
 python-dotenv==1.0.0
 pydantic==2.5.0
+httpx==0.25.0
 aiofiles==23.2.1
-httpx==0.25.2
-astrapy==1.0.0
+requests==2.31.0
+numpy==1.24.0
