--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-fastapi==0.100.0
-uvicorn==0.23.0
-langchain==0.1.0
-langchain-openai==0.0.8
-langchain-community==0.0.10
-openai==1.12.0
-pandas==2.0.3
+fastapi==0.104.1
+uvicorn==0.24.0
+langchain==0.1.20
+langchain-openai==0.1.8
+langchain-core==0.1.52
+langsmith==0.1.17
+openai==1.13.3
+pandas==2.1.3
 python-dotenv==1.0.0
 pydantic==2.5.0
-httpx==0.25.0
+httpx==0.25.2
 aiofiles==23.2.1
-requests==2.31.0
-numpy==1.24.0
