--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 fastapi==0.104.1
 uvicorn==0.24.0
-langchain-openai==0.1.8
-langsmith==0.1.17
-openai==1.13.3
+langchain==0.1.16
+langchain-openai==0.1.6
+langchain-core==0.1.46
+langsmith==0.1.15
+astrapy==0.7.7
 pandas==2.1.3
 python-dotenv==1.0.0
 pydantic==2.5.0
 httpx==0.25.2
+aiofiles==23.2.1
+python-multipart==0.0.6
