--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
 fastapi==0.104.1
-uvicorn==0.24.0
-langchain==0.1.16
-langchain-openai==0.1.6
-langchain-core==0.1.46
-langsmith==0.1.17
-astrapy==0.7.7
+uvicorn[standard]==0.24.0
+langchain-openai==0.1.1
+langchain-astradb==0.3.3
+langchain-core==0.1.52
 pandas==2.1.3
+python-multipart==0.0.6
 python-dotenv==1.0.0
 pydantic==2.5.0
-httpx==0.25.2
 aiofiles==23.2.1
-python-multipart==0.0.6
+httpx==0.25.2
+astrapy==1.0.0
